<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/privacidade"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".FormMenu">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        style="@style/Button"
        android:layout_width="120dp"
        android:height="60dp"
        android:layout_marginTop="240dp"
        android:text="Sair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_apolice" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_privacidade"
        style="@style/Button"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="130dp"
        android:text="@string/txt_btn_privacidade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_suporte"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_apolice"
        style="@style/Button"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/apolice"
        app:layout_constraintBottom_toTopOf="@+id/bt_suporte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_dadospessoais" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_dadospessoais"
        style="@style/Button"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/dados_pessoais"
        app:layout_constraintBottom_toTopOf="@+id/bt_apolice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="10dp"
        android:text="@string/menudados"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bt_dadospessoais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_suporte"
        style="@style/Button"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/suporte"
        app:layout_constraintBottom_toTopOf="@+id/bt_privacidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_apolice" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="165dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>